<?xml version="1.0"?>
<package format="3">
  <name>doppler_icp</name>
  <version>0.1.0</version>
  <description>ROS2 Doppler-ICP implementation</description>

  <!-- 必须添加 maintainer -->
  <maintainer email="fengruhua@example.com">fengruhua</maintainer>

  <!-- 必须添加 license -->
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>std_srvs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>